--- a/about.html
+++ b/about.html
@@ -13,29 +13,38 @@
 <body>
 
   <header class="mx-auto">
-    <a class="medium-hide pl-4 bars-icon c-black" href="#"><i class="fas fa-bars"></i></a>
-    <nav class="navbar-1  bg-gray-medium d-flex justify-content-end">
-      <a class="pl-2 pr-2 c-white" href="#">
-        <i class="fab fa-facebook-square"></i>
-      </a>
-      <a class="pl-2 pr-2 c-white" href="#">
-        <i class="fab fa-twitter-square"></i>
+    <nav class="navbar-1  bg-gray-medium d-flex justify-content-end align-items-center">
+      <i class="pl-2 pr-2 c-white fab fa-facebook-square"></i>
+      <i class="pl-2 pr-2 c-white fab fa-twitter-square"></i>
       </a>
       <a class="pl-2 pr-2 c-white font-f-1" href="#">English</a>
       <a class="pl-2 pr-2 c-white font-f-1 nav-item-1" href="#">My page</a>
       <a class="pl-2 pr-2 c-white" href="#">Logout</a>
     </nav>
 
-    <nav class="pt-2 pb-2 mb-4 navbar-2 d-md-flex d-lg-flex justify-content-md-around justify-content-lg-around  align-items-center c-black border-bottom">
+    <nav class="navbar navbar-expand-md navbar-light">
       <img class="navbar-item event-logo" src="images/logo-event.png" alt="logo-event">
-      <a class="navbar-item c-black" href="#">About</a>
-      <a class="navbar-item c-black" href=main.html>Main</a>
-      <a class="navbar-item c-orange font-weight-bolder" href="tickets.html">Tickets</a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-menu">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link c-black" href="main.html">Main</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link c-black" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tickets.html">Tickets</a>
+          </li>    
+        </ul>
+      </div>  
     </nav>
   </header>
 
   <main>
-    <section class="title-section mb-5 text-center container-fluid">
+    <section class="title-section mb-5 text-center container-fluid bg-gray pb-5 pt-4">
         <h1 class="title-span font-f-1 c-orange pt-2 pb-2">CREATIVE COMMONS GLOBAL SUMMIT 2021</h1>
         <p class="description-section font-f-2 p-3">Get access to civil engineering’s leading experts and information through our many conferences—from the ASCE Convention to specialized technical and leadership conferences. These are the perfect platforms to exchange ideas, meet a diverse group of colleagues, participate in discussions, learn about the latest innovations in your field, and earn professional development hours (PDHs), all at members-only discounts.</p>
         <p>Please contactus per Email for any further questions about CC Global Summit 2021!</p>
@@ -84,11 +93,11 @@
 
   </main>
 
-  <footer class="pt-5 pl-4 bg-gray-medium d-flex container-fluid justify-content-between">
-    <img class="logo-footer mr-4" src="images/logo-event.png" alt="event-logo">
+  <footer class="footer-section d-flex container-fluid justify-content-between pt-5 mt-5 bg-gray-medium pb-5">
+    <img class="logo-footer mr-2" src="images/logo-event.png" alt="event-logo">
     <div>
-      <p class="c-white font-f-2">2021 Creative Common Korea. Rights Reserved.</p>
-      <p class="c-white font-f-2">"You don’t pick up leadership skills sitting at your desk designing highways. The only way is to get out and work for it. And ASCE enables you to do that."</p>
+      <p class="c-white">2021 Creative Common Korea. Rights Reserved.</p>
+      <p class="c-white">"You don’t pick up leadership skills sitting at your desk designing highways. The only way is to get out and work for it. And ASCE enables you to do that."</p>
     </div>
   </footer>
   
