fixed linter errors

--- a/tickets.html
+++ b/tickets.html
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-expand-md navbar-light">
       <img class="navbar-item event-logo" src="images/logo-event.png" alt="logo-event">
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbar-menu" aria-expanded="false" aria-label="Toggle navigation" type="button">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar-menu">
@@ -106,7 +106,7 @@
         <form action="/" class="tickets-form-2 text-center medium-hide">
           <table class="table-tickets-2 container-fluid">
             <tr>
-              <th colspan="5">Tickets</th>
+              <th colspan="4">Tickets</th>
             </tr>
             <tr>
               <th>1-Day-Ticket</th>
@@ -115,7 +115,7 @@
             </tr>
 
             <tr>
-              <th colspan="5">Date</th>
+              <th colspan="4">Date</th>
             </tr>
 
             <tr>
@@ -126,7 +126,7 @@
             </tr>
 
             <tr>
-              <th colspan="5">Normal</th>
+              <th colspan="4">Normal</th>
             </tr>
 
             <tr>
