--- a/about.html
+++ b/about.html
@@ -16,7 +16,6 @@
     <nav class="navbar-1  bg-gray-medium d-flex justify-content-end align-items-center">
       <i class="pl-2 pr-2 c-white fab fa-facebook-square"></i>
       <i class="pl-2 pr-2 c-white fab fa-twitter-square"></i>
-      </a>
       <a class="pl-2 pr-2 c-white font-f-1" href="#">English</a>
       <a class="pl-2 pr-2 c-white font-f-1 nav-item-1" href="#">My page</a>
       <a class="pl-2 pr-2 c-white" href="#">Logout</a>
@@ -24,7 +23,7 @@
 
     <nav class="navbar navbar-expand-md navbar-light">
       <img class="navbar-item event-logo" src="images/logo-event.png" alt="logo-event">
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbar-menu" aria-expanded="false" aria-label="Toggle navigation" type="button">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar-menu">
