updated README file

--- a/tickets.html
+++ b/tickets.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/tickets.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
 </head>
 <body>
 
@@ -16,9 +17,9 @@
       
       <i class="pl-2 pr-2 c-white fab fa-facebook-square"></i>
       <i class="pl-2 pr-2 c-white fab fa-twitter-square"></i>
-      <a class="pl-2 pr-2 c-white font-f-1" href="#">English</a>
-      <a class="pl-2 pr-2 c-white font-f-1 nav-item-1" href="#">My page</a>
-      <a class="pl-2 pr-2 c-white" href="#">Logout</a>
+      <a class="pl-2 pr-2 c-white font-f-2" href="#">English</a>
+      <a class="pl-2 pr-2 c-white font-f-2 nav-item-1" href="#">My page</a>
+      <a class="pl-2 pr-2 c-white font-f-2" href="#">Logout</a>
     </nav>
 
     <nav class="navbar navbar-expand-md navbar-light">
