--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
 </head>
 <body>
 
@@ -15,9 +16,9 @@
     <nav class="navbar-1  bg-gray-medium d-flex justify-content-end align-items-center">
       <i class="pl-2 pr-2 c-white fab fa-facebook-square"></i>
       <i class="pl-2 pr-2 c-white fab fa-twitter-square"></i>
-      <a class="pl-2 pr-2 c-white font-f-1" href="#">English</a>
-      <a class="pl-2 pr-2 c-white font-f-1 nav-item-1" href="#">My page</a>
-      <a class="pl-2 pr-2 c-white" href="#">Logout</a>
+      <a class="pl-2 pr-2 c-white font-f-2" href="#">English</a>
+      <a class="pl-2 pr-2 c-white font-f-2 nav-item-1" href="#">My page</a>
+      <a class="pl-2 pr-2 c-white font-f-2" href="#">Logout</a>
     </nav>
 
     <nav class="navbar navbar-expand-md navbar-light">
@@ -43,7 +44,7 @@
   </header>
 
   <main class="">
-    <section class="title-section mb-5 ml-3 mr-3">
+    <section class="title-section pt-5 mb-5 ml-3 mr-3">
       <h1 class="title-h1 c-orange">"Hello! Sharing World"</h1>
         <p class="title-span font-f-1 c-orange pt-2 pb-2">CREATIVE SOLUTIONS FOR ENGINEERS 2021</p>
         <p class="description-section font-f-2 p-3">The global event that takes place in Korea this year will be the biggest event for engineers solutions to all problems we face in this 2021.</p>
