--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     </nav>
 
     <nav class="navbar navbar-expand-md navbar-light">
-      <img class="navbar-item event-logo" src="images/logo-event.png" alt="logo-event">
+      <img class="navbar-item event-logo" src="images/logo-2-event.png" alt="logo-event">
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbar-menu" aria-expanded="false" aria-label="Toggle navigation" type="button">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -94,7 +94,7 @@
   </main>
 
   <footer class="footer-section d-flex container-fluid justify-content-between pt-5 mt-5 bg-gray-medium pb-5">
-    <img class="logo-footer mr-2" src="images/logo-event.png" alt="event-logo">
+    <img class="logo-footer mr-2" src="images/logo-2-event.png" alt="event-logo">
     <div>
       <p class="c-white">2021 Creative Common Korea. Rights Reserved.</p>
       <p class="c-white">"You don’t pick up leadership skills sitting at your desk designing highways. The only way is to get out and work for it. And ASCE enables you to do that."</p>
