fixed linter error

--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 <body>
 
   <header class="mx-auto">
-    <nav class="navbar-1  bg-gray-medium d-flex justify-content-end align-items-center">
+    <nav class="navbar-1  bg-gray-medium d-flex justify-content-end align-items-center medium-show">
       <i class="pl-2 pr-2 c-white fab fa-facebook-square"></i>
       <i class="pl-2 pr-2 c-white fab fa-twitter-square"></i>
       <a class="pl-2 pr-2 c-white font-f-2" href="#">English</a>
