--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body>
 
   <header class="mx-auto">
-    <nav class="navbar-1  bg-gray-medium d-flex justify-content-end align-items-center">
+    <nav class="navbar-1  bg-gray-medium d-flex justify-content-end align-items-center medium-show">
       <i class="pl-2 pr-2 c-white fab fa-facebook-square"></i>
       <i class="pl-2 pr-2 c-white fab fa-twitter-square"></i>
       <a class="pl-2 pr-2 c-white font-f-2" href="#">English</a>
@@ -101,5 +101,8 @@
     </div>
   </footer>
   
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
