--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse" id="navbar-menu">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link c-black" href="main.html">Main</a>
+            <a class="nav-link c-black" href="index.html">Main</a>
           </li>
           <li class="nav-item">
             <a class="nav-link c-black" href="about.html">About</a>
