changed the color of the partner title

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <h2 class="hide-all">empty heading</h2>
       <article class="d-flex flex-column mx-auto">
         <div>
-          <h3 class="d-flex justify-content-center pb-1">Partner</h3>
+          <h3 class="d-flex justify-content-center pb-1 c-white">Partner</h3>
           <div class="border-orange d-flex mx-auto mb-5"></div>
         </div>
 
