deleted one classes in main section causing conflict in tablet version

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
           </div>
 
-          <div class="pt-2 pb-2 col-sm-12 col-md-6 col-lg-2 each-pic">
+          <div class="pt-2 pb-2 col-sm-12 col-md-6 col-lg-2">
             <img class="card-img-top" src="images/icon-5.jpg" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity each-pic">
               <h4 class="titles-program c-orange">CC Ignite</h4>
